<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight1"
        tools:context=".ui.RegisterActivity">

    <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbarSize"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

        <ImageView
                android:id="@+id/img_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:rotation="90"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_next_arrow_white"/>

        <ImageView
                android:id="@+id/img_refresh"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_refresh"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/img_back"
                android:layout_toEndOf="@+id/img_back"
                android:layout_toLeftOf="@+id/img_refresh"
                android:layout_toStartOf="@+id/img_refresh"
                android:gravity="start|center"
                android:text="@string/trip_history"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/futura_medium_bt"
                android:textSize="@dimen/txt_22"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

        <com.geospark.carpooling.util.EmptyRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

        <TextView
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/no_trip_created"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/txt_20"
                android:fontFamily="@font/futura_medium_bt"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="50dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:background="@drawable/rounded_corner_ride"
            android:orientation="vertical">

        <TextView
                android:id="@+id/txt_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_medium_bt"
                android:textColor="@color/colorBlack"
                android:layout_centerInParent="true"
                android:textSize="@dimen/txt_18"
                android:text="Loading..."/>

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_toLeftOf="@+id/txt_load"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>
    </RelativeLayout>


</RelativeLayout>